<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/pedir"
            android:icon="@mipmap/ic_action_location"
            android:title="@string/pedir" />
        <item
            android:id="@+id/historial"
            android:icon="@mipmap/ic_action_paste"
            android:title="@string/historial" />
        <item
            android:id="@+id/perfil"
            android:icon="@mipmap/ic_action_user"
            android:title="@string/perfil" />
        <item
            android:id="@+id/datosPago"
            android:icon="@mipmap/ic_action_creditcard"
            android:title="@string/datospago" />
        <item
            android:id="@+id/ayuda"
            android:icon="@mipmap/ic_action_help"
            android:title="@string/help" />
        <item
            android:id="@+id/logout"
            android:icon="@mipmap/ic_action_io"
            android:title="@string/logout" />
    </group>


</menu>
