<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/nombrePersonal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/separationTopObjects"
        android:lines="1"
        android:hint="@string/nombrePersonal"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/separationTopObjects"
        android:inputType="phone"
        android:lines="1"
        android:hint="@string/cellphone"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/separationTopObjects"
        android:lines="1"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:lines="1"
        android:layout_marginTop="@dimen/separationTopObjects"
        android:hint="@string/password"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <Button
            android:layout_width="@dimen/middle"
            android:layout_height="wrap_content"
            android:background="@color/registerButton"
            android:textColor="@color/textWhite"
            android:text="@string/cancel"
            android:onClick="cancel"/>

        <Button
            android:layout_width="@dimen/middle"
            android:layout_height="wrap_content"
            android:background="@color/loginButton"
            android:text="@string/ok"
            android:onClick="signup"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</LinearLayout>
