<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context=".AccessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:src="@mipmap/clockbeer"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/separationTopObjects"
            android:gravity="center"
            android:textColor="@color/textWhite"
            android:text="@string/slogan"/>

        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/separationTopObjects"
            android:text="@string/singin"
            android:background="@drawable/round_button_login"
            android:onClick="signin"/>

        <Button
            android:id="@+id/singup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/separationTopObjects"
            android:text="@string/singup"
            android:textColor="@color/textWhite"
            android:background="@drawable/round_button_register"
            android:onClick="signup"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/separationTopObjects"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/request"
            android:textColor="@color/textWhite"
            android:onClick="repartir"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20dp"
        android:text="@string/avisoPrivacidad"
        android:textColor="@color/textWhite"
        android:clickable="true"
        android:onClick="avisoPrivacidad"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



</RelativeLayout>
